--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "groq-sdk": "^0.37.0",
     "knex": "^3.1.0",
     "lucide-react": "^0.559.0",
     "next": "16.0.8",
