--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@stripe/stripe-js": "^8.5.3",
     "better-auth": "^1.4.6",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
@@ -30,6 +31,7 @@
     "lucide-react": "^0.559.0",
     "nanoid": "^5.1.6",
     "next": "16.0.8",
+    "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "19.2.1",
