--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Derive lowercase image owner
+        id: image
+        shell: bash
+        run: echo "owner_lc=${GITHUB_REPOSITORY_OWNER,,}" >> "$GITHUB_OUTPUT"
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
@@ -35,4 +40,4 @@ jobs:
         with:
           context: .
           push: false
-          tags: ghcr.io/${{ github.repository_owner }}/playground:latest
+          tags: ghcr.io/${{ steps.image.outputs.owner_lc }}/playground:latest
