--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -51,7 +51,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           port: ${{ secrets.EC2_PORT }}
-          envs: APP_DIR,IMAGE_TAG
+          envs: APP_DIR,IMAGE_TAG,GHCR_TOKEN
           script: |
             set -e
 
